--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "tsnd --respawn --transpile-only --exit-child src/app.ts"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.1",
     "@prisma/client": "^4.12.0",
     "axios": "^1.3.5",
     "fastify": "^4.15.0",
